# daemon

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  index.html  package.json
.github/workflows/: release.yml
fixtures/: conversations.json
public/wizard_hat/: wizard_hat1.anim  wizard_hat_blinking.anim  wizard_hat_dragged.anim  wizard_hat_sleeping.anim  wizard_hat_talking.anim
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  events.rs  jobs.rs  lib.rs  main.rs  proposals.rs  providers.rs  screen_aware.rs  secrets.rs  state.rs  storage.rs
src-tauri/src/openai/: mod.rs  turns.rs  types.rs
src-tauri/src/tools/: memory.rs  mod.rs  notes.rs  policy.rs  repos.rs
src/components/: ConfirmationCard.tsx  Mascot.tsx  ProviderToolbox.tsx
src/lib/: daemon.ts  events.ts
src/mascot/: manifest.ts  state.ts
