[package]
name = "daemon"
version = "1.0.0"
description = "A desktop human like companion"
authors = ["Sagar Sharma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daemon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
flate2 = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png"] }
half = "2.6"
ort = { version = "=2.0.0-rc.9", features = ["half"] }
ort-sys = "=2.0.0-rc.9"
tar = "0.4"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
xcap = "=0.8.1"
